<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TUIOdroid</string>
    <string name="orientation_prompt">Screen Orientation</string>
    <string name="opensettings_prompt">Open Settings by</string>
    <string-array name="opensettings_array">
        <item>Shake</item>
        <item>Back Button</item>
        <item>Volume Up</item>
        <item>Volume Down</item>
        <item>Volume Up + Down</item>
    </string-array>
    <string-array name="orientation_array">
        <item>System</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
        <string name="host_string">Target IP Address</string>
        <string name="udp_string">Target UDP Port</string>
        <string name="author_string" translatable="false">
            &#169; 2011&#8211;2015 by Tobias Schwirten &amp; Martin Kaltenbrunner,
            &#169; 2022 EmiyaSyahriel
        </string>
        <string name="help_string">
This application sends multitouch events via TUIO/UDP. You can change the target IP
address and port number as well as the default screen orientation in the settings
dialog. The TUIO verbosity can be increased for the use on unreliable networks. You
will find further information about the TUIO protocol and framework at http://www.tuio.org\n
\nA possible \&quot;Client does not respond\&quot; error message indicates that there is no
response from the configured target IP address. In some cases this is related to the
firewall settings on your client device, and will work properly in spite of the warning.\n
\nThe included Java TUIO implementation is based on the JavaOSC library by
Chandrasekhar Ramakrishnan.
        </string>
		<string name="url_string" translatable="false">http://www.tuio.org/</string>
    <string name="target_ip_address">Target IP Address</string>
    <string name="target_ip_address_default" translatable="false">192.168.1.2</string>
    <string name="target_udp_port_default" translatable="false">3333</string>
    <string name="target_udp_port">Target UDP Port</string>
    <string name="show_debug_info">Show Debug Info</string>
    <string name="display_verbose_info">Verbose TUIO</string>
    <string name="save_settings">Save Settings</string>
    <string name="local_ip_placeholder_default" translatable="false">127.0.0.1</string>
    <string name="local_ip">Local IP</string>
    <string name="no_network">No active network connection found!</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="invalid_port">Invalid UDP port number!</string>
    <string name="invalid_ip_address">Invalid host name or IP address!</string>
    <string name="reval_invalid_address">invalid address</string>
    <string name="reval_invalid_port">invalid port</string>
    <string name="err_client_refused">Client does not respond (check firewall)</string>
    <string name="fmt_tuio_src">TUIO source: %s</string>
    <string name="fmt_tuio_client_addr">TUIO/UDP client: %s:%d</string>
    <string name="msg_discard_settings_title">Discard Changes?</string>
    <string name="msg_discard_settings_content">You can select Save in the Menu to save your changes.</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_desc">Save current changes and back to TUIO page.</string>
    <string name="menu_help_desc">Show help page.</string>
    <string name="menu_exit_desc">Exit from the app.</string>

</resources>
