<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              	android:layout_width="fill_parent" 
              	android:layout_height="fill_parent" 
              	android:orientation="vertical"
    android:padding="10dp"
    >

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/localIP_Layout"
        >
        <TextView
            android:id="@+id/tv_localIP"
            android:layout_height="wrap_content"
            android:text="@string/local_ip"
            android:layout_width="140dip"/>
        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/localIP"
            android:text="@string/local_ip_placeholder_default"
            android:padding="5dp"
            android:textSize="18sp"
            android:layout_width="fill_parent"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ip_Layout">
        <TextView
            android:id="@+id/tv_IP"
            android:layout_height="wrap_content"
            android:text="@string/target_ip_address"
            android:layout_width="140dip"/>
        <EditText
            android:text="@string/target_ip_address_default"
            android:id="@+id/et_IP"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/port_Layout">
        <TextView
            android:id="@+id/tv_Port"
            android:layout_height="wrap_content"
            android:text="@string/target_udp_port"
            android:layout_width="140dip"/>
        <EditText
            android:text="@string/target_udp_port_default"
            android:id="@+id/et_Port"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/orientation_Layout"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView android:id="@+id/tv_spinner"
            android:layout_height="wrap_content"
            android:text="@string/orientation_prompt"
            android:layout_width="140dip"/>
        <Spinner
            android:prompt="@string/orientation_prompt"
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="50sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/opensettings_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_spinner_1"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:text="@string/opensettings_prompt"/>
        <Spinner
            android:id="@+id/spinner_2"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:prompt="@string/opensettings_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:id="@+id/debug_Layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent">
        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/checkB_Verbosity"
            android:text="@string/display_verbose_info"/>
        <CheckBox
            android:id="@+id/checkB_ExtraInfo"
            android:layout_height="wrap_content"
            android:text="@string/show_debug_info"
            android:layout_width="wrap_content"/>
    </LinearLayout>
  
</LinearLayout>